@@ -1,5 +1,8 @@
 
 leachbj - Thu October 7 2004
+	merged settings menu support from ansi
+
+leachbj - Thu October 7 2004
 	merged play/pause and timer patch from Prashant
 
 leachbj - Fri October 1 2004
